--- a/app/src/main/res/layout/fragment_demibas_detay.xml
+++ b/app/src/main/res/layout/fragment_demibas_detay.xml
@@ -266,7 +266,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textAllCaps="false"
                 android:text="Online Tif İşlemleri"
+                android:textColor="@color/colorWhite"
+                android:background="#ec7e1c"
                 app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                 app:layout_constraintEnd_toEndOf="@+id/rvDemirbasPhotoList"
                 app:layout_constraintHorizontal_bias="0.0"
