--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/backgroundToolbar"
+                app:titleTextColor="@color/colorBlack"
                 app:navigationIcon="@mipmap/ic_icon"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:title="@{viewModel.titleToolbar}"
