--- a/app/src/main/res/layout/item_envanter_card_selectable.xml
+++ b/app/src/main/res/layout/item_envanter_card_selectable.xml
@@ -15,101 +15,105 @@
     </data>
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/cardview_shadow_start_color"
-        android:onClick="@{()->viewModel.onClick()}">
+        android:background="@drawable/background_item"
+        android:onClick="@{()->viewModel.onClick()}"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        android:paddingBottom="5dp"
+
+        >
+
+        <RadioButton
+            android:id="@+id/viewNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:checked="@={viewModel.selected}"
+            android:clickable="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/tvUst"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/colorItemEnvanterCardBGround"
-            android:orientation="vertical">
-
-            <RadioButton
-                android:id="@+id/viewNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:checked="@={viewModel.selected}"
-                android:clickable="false"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@{viewModel.ust}"
+            app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/viewCizgi"
+            app:layout_constraintTop_toTopOf="parent" />
+        <!--android:text="@{demirbas.idString + demirbas.tasinir + demirbas.faturaNo}"-->
 
 
-            <TextView
-                android:id="@+id/tvUst"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@{viewModel.ust}"
-                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/viewCizgi"
-                app:layout_constraintTop_toTopOf="parent" />
-            <!--android:text="@{demirbas.idString + demirbas.tasinir + demirbas.faturaNo}"-->
+        <View
+            android:id="@+id/viewCizgi"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/colorItemEnvanterCizgi"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/viewNumber"
+            app:layout_constraintTop_toBottomOf="@+id/tvUst" />
 
 
-            <View
-                android:id="@+id/viewCizgi"
-                android:layout_width="0dp"
-                android:layout_height="2dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@color/colorItemEnvanterCizgi"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/viewNumber"
-                app:layout_constraintTop_toBottomOf="@+id/tvUst" />
+        <TextView
+            android:id="@+id/tvAlt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@{viewModel.alt}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tvUst"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/tvUst"
+            app:layout_constraintTop_toBottomOf="@+id/viewCizgi"
+            app:layout_constraintVertical_bias="0.0" />
+        <!--android:text="@{demirbas.adi}"-->
 
+        <Button
+            android:id="@+id/btnDetay"
+            android:layout_width="61dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="5dp"
+            android:paddingStart="5dp"
+            android:background="@drawable/background_btn_demirbas_detay"
+            android:drawableLeft="@drawable/ic_search_for_btn"
+            android:onClick="@{(view)->activity.goEnvanterDetayFragment(viewModel.envanter)}"
+            android:textAllCaps="false"
+            android:text="Detay"
+            android:textColor="@color/colorWhite"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnResim"
+            app:layout_constraintEnd_toStartOf="@+id/btnResim"
+            app:layout_constraintTop_toTopOf="@+id/btnResim" />
 
-            <TextView
-                android:id="@+id/tvAlt"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="@{viewModel.alt}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tvUst"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/tvUst"
-                app:layout_constraintTop_toBottomOf="@+id/viewCizgi"
-                app:layout_constraintVertical_bias="0.0" />
-            <!--android:text="@{demirbas.adi}"-->
+        <Button
+            android:id="@+id/btnResim"
+            android:layout_width="61dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/background_btn_resim_goster"
+            android:drawableLeft="@mipmap/picture"
+            android:paddingStart="5dp"
+            android:textAllCaps="false"
+            android:text="Resim"
+            android:textColor="@color/colorWhite"
+            android:textSize="8sp"
+            app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
+            app:layout_constraintTop_toBottomOf="@+id/tvAlt" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <Button
-                android:id="@+id/btnDetay"
-                android:layout_width="61dp"
-                android:layout_height="29dp"
-                android:layout_marginEnd="5dp"
-                android:drawableLeft="@drawable/ic_search_for_btn"
-                android:onClick="@{(view)->activity.goEnvanterDetayFragment(viewModel.envanter)}"
-                android:text="Detay"
-                android:textSize="8sp"
-                app:layout_constraintBottom_toBottomOf="@+id/btnResim"
-                app:layout_constraintEnd_toStartOf="@+id/btnResim"
-                app:layout_constraintTop_toTopOf="@+id/btnResim" />
-
-            <Button
-                android:id="@+id/btnResim"
-                android:layout_width="61dp"
-                android:layout_height="29dp"
-                android:layout_marginTop="5dp"
-                android:drawableLeft="@drawable/ic_search_for_btn"
-                android:text="Resim"
-                android:textSize="8sp"
-                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
-                app:layout_constraintTop_toBottomOf="@+id/tvAlt" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
 </layout>
