--- a/app/src/main/res/layout/fragment_tif2.xml
+++ b/app/src/main/res/layout/fragment_tif2.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.fragments.TifIslem1Fragment">
 
@@ -18,65 +17,71 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="10dp">
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/marginStart"
+            android:paddingEnd="@dimen/marginEnd">
 
-            <ListView
-                android:id="@+id/lvTifList"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/btnIslemiGerceklestir"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_max="150dp"
-                app:layout_constraintHeight_min="30dp"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minHeight="240dp"
+                >
+                <ListView
+                    android:id="@+id/lvTifList"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:divider="@color/colorItemEnvanterCardBGround"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@color/colorItemEnvanterCardBGround"
+                    />
+            </TableRow>
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/spinner_bg"
-                android:entries="@array/arrayIslemTurleri"
-                android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"
-                android:spinnerMode="dropdown"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="@+id/lvTifList"
-                app:layout_constraintStart_toStartOf="@+id/lvTifList"
-                app:layout_constraintTop_toBottomOf="@+id/lvTifList" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/spinner_bg"
+                    android:entries="@array/arrayIslemTurleri"
+                    android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"
+                    android:spinnerMode="dropdown"
+                    android:textSize="16sp"
+                    />
+            </TableRow>
 
-            <FrameLayout
-                android:id="@+id/f_layout"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/btnIslemiGerceklestir"
-                app:layout_constraintEnd_toEndOf="@+id/spinner"
-                app:layout_constraintStart_toStartOf="@+id/spinner"
-                app:layout_constraintTop_toBottomOf="@+id/spinner">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <FrameLayout
+                    android:id="@+id/f_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
 
-            </FrameLayout>
+                </FrameLayout>
+            </TableRow>
 
-            <Button
-                android:id="@+id/btnIslemiGerceklestir"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="500dp"
-                android:text="İşlemi Gerçekleştir"
-                app:layout_constraintStart_toStartOf="@+id/f_layout"
-                app:layout_constraintEnd_toEndOf="@+id/f_layout"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <Button
+                    android:id="@+id/btnIslemiGerceklestir"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="İşlemi Gerçekleştir"
+                    />
+            </TableRow>
+        </TableLayout>
     </ScrollView>
 </layout>
